[package]
name = "cxx-test-suite"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
cxx = { path = "../..", default-features = false }

[build-dependencies]
cxx-build = { path = "../../gen/build" }
cxxbridge-flags = { path = "../../flags" }
