[package]
name = "cxx-test-suite"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2024"
publish = false

[lib]
path = "lib.rs"

[dependencies]
cxx = { path = "../..", default-features = false }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
cxx-build = { path = "../../bridge/build" }
cxxbridge-flags = { path = "../../flags" }
