load("@rules_rust//rust:defs.bzl", "rust_test")

rust_test(
    name = "test",
    size = "small",
    srcs = glob(["*.rs"]),
    edition = "2021",
    deps = [
        ":tests",
    ],
)

cc_library(
    name = "tests",
    testonly = True,
    srcs = [
        "tests.cc",
    ],
    hdrs = ["tests.h"],
    deps = [
        "@capnp-cpp//src/kj:kj-async",
        "@kj-rs//:kj-rs",
    ],
)
