load("@rules_rust//rust:defs.bzl", "rust_test")
load("//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")

rust_test(
    name = "test",
    size = "small",
    srcs = glob(["*.rs"]),
    edition = "2021",
    deps = [
        ":bridge",
        ":tests",
        "//:cxx",
        "@kj-rs//:kj-rs",
    ],
)

rust_cxx_bridge(
    name = "bridge",
    testonly = True,
    src = "lib.rs",
    hdrs = ["tests.h"],
    deps = [
        "@kj-rs//:kj-rs",
    ],
)

cc_library(
    name = "tests",
    testonly = True,
    srcs = [
        "tests.cc",
    ],
    hdrs = ["tests.h"],
    deps = [
        "@capnp-cpp//src/kj:kj-async",
        "@kj-rs//:kj-rs",
        ":bridge",
    ],
)
