load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "bzl_srcs",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
)

xcode_version(
    name = "github_actions_xcode_16_3_0",
    default_macos_sdk_version = "14.5",
    version = "16.3",
)

xcode_config(
    name = "github_actions_xcodes",
    default = ":github_actions_xcode_16_3_0",
    versions = [":github_actions_xcode_16_3_0"],
)
