[package]
name = "demo-rust-lib-bridged"
version = "0.1.0"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
license = "MIT"
edition = "2018"

[dependencies]
cxx = { path = "../../../../../cxx" }

[build-dependencies]
cxx = { path = "../../../../../cxx" }

[lib]
crate-type=["staticlib"]

[workspace]
members = []
